--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "lint": "tslint -p tsconfig.json -c tslint.json",
         "dev": "cross-env NODE_ENV=development && ts-node-dev --respawn --transpileOnly src/server.ts",
-        "test": "jest",
+        "test": "jest --config=jest-config.js",
         "test:watch": "jest --verbose --watchAll"
     },
     "dependencies": {
@@ -21,7 +21,7 @@
         "@types/request": "^2.48.5",
         "axios": "^0.22.0",
         "bcrypt": "^4.0.0",
-        "chance": "^1.1.7",
+        "chance": "^1.1.8",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "express": "^4.17.1",
@@ -34,6 +34,7 @@
         "pg": "8.5.1",
         "reflect-metadata": "^0.1.13",
         "request": "^2.88.2",
+        "ts-jest": "^27.0.5",
         "typeorm": "^0.2.31",
         "typeorm-naming-strategies": "^1.3.0"
     },
@@ -51,7 +52,7 @@
     "jest": {
         "testEnvironment": "node",
         "coveragePathIgnorePatterns": [
-          "/node_modules/"
+            "/node_modules/"
         ]
-      }
+    }
 }
